--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,9 @@
         "baseUrl": ".",
         "paths": {
             "@/*": ["resources/ts/*"]
-        }
+        },
+        "sourceMap": true,
+        "noEmitOnError": false
     },
     "include": [
         "resources/ts/**/*.ts",
