--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@react-three/offscreen": "^0.0.8",
         "@react-three/xr": "^5.7.1",
         "@tanstack/react-query": "^5.29.2",
+        "@types/aframe": "^1.2.6",
         "@types/react": "^18.2.79",
         "@types/react-dom": "^18.2.25",
         "@types/react-router-dom": "^5.3.3",
@@ -31,6 +32,11 @@
     "dependencies": {
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
-        "@mui/material": "^5.15.15"
+        "@mui/icons-material": "^5.15.16",
+        "@mui/material": "^5.15.16",
+        "@tweenjs/tween.js": "^23.1.1",
+        "aframe": "^1.5.0",
+        "aframe-ar": "^0.2.1-a",
+        "aframe-react": "^4.4.0"
     }
 }
